--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -3,6 +3,7 @@
 @import "modules/footer/footer";
 @import "modules/temp/temp";
 @import "modules/modal/modal";
+@import "modules/mmenu/mmenu";
 @import "modules/breadcrumbs/breadcrumbs";
 @import "modules/sidebar/sidebar";
 @import "modules/gallery/gallery";
