--- a/src/views/23-2-page.html
+++ b/src/views/23-2-page.html
@@ -285,101 +285,149 @@
 							</p>
 							<div class="map__list-content">
 								<!-- При клике на арендатора переходим на соответствующую страницу -->
-								<a href="#" class="map__list-item">
-									<strong>01</strong>
-									ART FLEX
+								<a href="#" class="map__list-item" data-partner-type="1">
+									<p>
+										<strong>01</strong>
+										ART FLEX
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>02</strong>
-									ASKONA
+								<a href="#" class="map__list-item" data-partner-type="2">
+									<p>
+										<strong>02</strong>
+										ASKONA
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>03</strong>
-									BOXX
+								<a href="#" class="map__list-item" data-partner-type="3">
+									<p>
+										<strong>03</strong>
+										BOXX
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>04</strong>
-									ART FLEX
+								<a href="#" class="map__list-item" data-partner-type="4">
+									<p>
+										<strong>04</strong>
+										ART FLEX
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>05</strong>
-									ASKONA
+								<a href="#" class="map__list-item" data-partner-type="5">
+									<p>
+										<strong>05</strong>
+										ASKONA
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>06</strong>
-									BOXX
+								<a href="#" class="map__list-item" data-partner-type="6">
+									<p>
+										<strong>06</strong>
+										BOXX
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>07</strong>
-									CINNO CILLINNI
+								<a href="#" class="map__list-item" data-partner-type="7">
+									<p>
+										<strong>07</strong>
+										CINNO CILLINNI
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>08</strong>
-									EVRO DIVAN
+								<a href="#" class="map__list-item" data-partner-type="8">
+									<p>
+										<strong>08</strong>
+										EVRO DIVAN
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>09</strong>
-									GoodWill
+								<a href="#" class="map__list-item" data-partner-type="9">
+									<p>
+										<strong>09</strong>
+										GoodWill
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>10</strong>
-									CINNO CILLINNI
+								<a href="#" class="map__list-item" data-partner-type="10">
+									<p>
+										<strong>10</strong>
+										CINNO CILLINNI
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>11</strong>
-									EVRO DIVAN
+								<a href="#" class="map__list-item" data-partner-type="1">
+									<p>
+										<strong>11</strong>
+										EVRO DIVAN
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>12</strong>
-									GoodWill
+								<a href="#" class="map__list-item" data-partner-type="2">
+									<p>
+										<strong>12</strong>
+										GoodWill
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>13</strong>
-									Hilding Anders 
+								<a href="#" class="map__list-item" data-partner-type="3">
+									<p>
+										<strong>13</strong>
+										Hilding Anders 
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>14</strong>
-									Любимый дом
+								<a href="#" class="map__list-item" data-partner-type="4">
+									<p>
+										<strong>14</strong>
+										Любимый дом
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>15</strong>
-									MOON
+								<a href="#" class="map__list-item" data-partner-type="5">
+									<p>
+										<strong>15</strong>
+										MOON
+									</p>
 								</a>
-								<a href="" class="map__list-item">
-									<strong>16</strong>
-									Hilding Anders 
+								<a href="" class="map__list-item" data-partner-type="6">
+									<p>
+										<strong>16</strong>
+										Hilding Anders 
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>17</strong>
-									Любимый дом
+								<a href="#" class="map__list-item" data-partner-type="7">
+									<p>
+										<strong>17</strong>
+										Любимый дом
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>18</strong>
-									MOON
+								<a href="#" class="map__list-item" data-partner-type="8">
+									<p>
+										<strong>18</strong>
+										MOON
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>19</strong>
-									Hilding Anders 
+								<a href="#" class="map__list-item" data-partner-type="9">
+									<p>
+										<strong>19</strong>
+										Hilding Anders 
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>20</strong>
-									Любимый дом
+								<a href="#" class="map__list-item" data-partner-type="10">
+									<p>
+										<strong>20</strong>
+										Любимый дом
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>21</strong>
-									MOON
+								<a href="#" class="map__list-item" data-partner-type="1">
+									<p>
+										<strong>21</strong>
+										MOON
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>22</strong>
-									Hilding Anders 
+								<a href="#" class="map__list-item" data-partner-type="2">
+									<p>
+										<strong>22</strong>
+										Hilding Anders 
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>23</strong>
-									Любимый дом
+								<a href="#" class="map__list-item" data-partner-type="3">
+									<p>
+										<strong>23</strong>
+										Любимый дом
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>24</strong>
-									MOON
+								<a href="#" class="map__list-item" data-partner-type="4">
+									<p>
+										<strong>24</strong>
+										MOON
+									</p>
 								</a>
 							</div>
 						</div>
@@ -389,101 +437,149 @@
 							</p>
 							<div class="map__list-content">
 								<!-- При клике на арендатора переходим на соответствующую страницу -->
-								<a href="#" class="map__list-item">
-									<strong>01</strong>
-									ART FLEX
+								<a href="#" class="map__list-item" data-partner-type="1">
+									<p>
+										<strong>01</strong>
+										ART FLEX
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>02</strong>
-									ASKONA
+								<a href="#" class="map__list-item" data-partner-type="2">
+									<p>
+										<strong>02</strong>
+										ASKONA
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>03</strong>
-									BOXX
+								<a href="#" class="map__list-item" data-partner-type="3">
+									<p>
+										<strong>03</strong>
+										BOXX
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>04</strong>
-									ART FLEX
+								<a href="#" class="map__list-item" data-partner-type="4">
+									<p>
+										<strong>04</strong>
+										ART FLEX
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>05</strong>
-									ASKONA
+								<a href="#" class="map__list-item" data-partner-type="5">
+									<p>
+										<strong>05</strong>
+										ASKONA
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>06</strong>
-									BOXX
+								<a href="#" class="map__list-item" data-partner-type="6">
+									<p>
+										<strong>06</strong>
+										BOXX
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>07</strong>
-									CINNO CILLINNI
+								<a href="#" class="map__list-item" data-partner-type="7">
+									<p>
+										<strong>07</strong>
+										CINNO CILLINNI
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>08</strong>
-									EVRO DIVAN
+								<a href="#" class="map__list-item" data-partner-type="8">
+									<p>
+										<strong>08</strong>
+										EVRO DIVAN
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>09</strong>
-									GoodWill
+								<a href="#" class="map__list-item" data-partner-type="9">
+									<p>
+										<strong>09</strong>
+										GoodWill
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>10</strong>
-									CINNO CILLINNI
+								<a href="#" class="map__list-item" data-partner-type="10">
+									<p>
+										<strong>10</strong>
+										CINNO CILLINNI
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>11</strong>
-									EVRO DIVAN
+								<a href="#" class="map__list-item" data-partner-type="1">
+									<p>
+										<strong>11</strong>
+										EVRO DIVAN
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>12</strong>
-									GoodWill
+								<a href="#" class="map__list-item" data-partner-type="2">
+									<p>
+										<strong>12</strong>
+										GoodWill
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>13</strong>
-									Hilding Anders 
+								<a href="#" class="map__list-item" data-partner-type="3">
+									<p>
+										<strong>13</strong>
+										Hilding Anders 
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>14</strong>
-									Любимый дом
+								<a href="#" class="map__list-item" data-partner-type="4">
+									<p>
+										<strong>14</strong>
+										Любимый дом
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>15</strong>
-									MOON
+								<a href="#" class="map__list-item" data-partner-type="5">
+									<p>
+										<strong>15</strong>
+										MOON
+									</p>
 								</a>
-								<a href="" class="map__list-item">
-									<strong>16</strong>
-									Hilding Anders 
+								<a href="" class="map__list-item" data-partner-type="6">
+									<p>
+										<strong>16</strong>
+										Hilding Anders 
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>17</strong>
-									Любимый дом
+								<a href="#" class="map__list-item" data-partner-type="7">
+									<p>
+										<strong>17</strong>
+										Любимый дом
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>18</strong>
-									MOON
+								<a href="#" class="map__list-item" data-partner-type="8">
+									<p>
+										<strong>18</strong>
+										MOON
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>19</strong>
-									Hilding Anders 
+								<a href="#" class="map__list-item" data-partner-type="9">
+									<p>
+										<strong>19</strong>
+										Hilding Anders 
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>20</strong>
-									Любимый дом
+								<a href="#" class="map__list-item" data-partner-type="10">
+									<p>
+										<strong>20</strong>
+										Любимый дом
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>21</strong>
-									MOON
+								<a href="#" class="map__list-item" data-partner-type="1">
+									<p>
+										<strong>21</strong>
+										MOON
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>22</strong>
-									Hilding Anders 
+								<a href="#" class="map__list-item" data-partner-type="2">
+									<p>
+										<strong>22</strong>
+										Hilding Anders 
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>23</strong>
-									Любимый дом
+								<a href="#" class="map__list-item" data-partner-type="3">
+									<p>
+										<strong>23</strong>
+										Любимый дом
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>24</strong>
-									MOON
+								<a href="#" class="map__list-item" data-partner-type="4">
+									<p>
+										<strong>24</strong>
+										MOON
+									</p>
 								</a>
 							</div>
 						</div>
@@ -493,101 +589,149 @@
 							</p>
 							<div class="map__list-content">
 								<!-- При клике на арендатора переходим на соответствующую страницу -->
-								<a href="#" class="map__list-item">
-									<strong>01</strong>
-									ART FLEX
+								<a href="#" class="map__list-item" data-partner-type="1">
+									<p>
+										<strong>01</strong>
+										ART FLEX
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>02</strong>
-									ASKONA
+								<a href="#" class="map__list-item" data-partner-type="2">
+									<p>
+										<strong>02</strong>
+										ASKONA
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>03</strong>
-									BOXX
+								<a href="#" class="map__list-item" data-partner-type="3">
+									<p>
+										<strong>03</strong>
+										BOXX
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>04</strong>
-									ART FLEX
+								<a href="#" class="map__list-item" data-partner-type="4">
+									<p>
+										<strong>04</strong>
+										ART FLEX
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>05</strong>
-									ASKONA
+								<a href="#" class="map__list-item" data-partner-type="5">
+									<p>
+										<strong>05</strong>
+										ASKONA
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>06</strong>
-									BOXX
+								<a href="#" class="map__list-item" data-partner-type="6">
+									<p>
+										<strong>06</strong>
+										BOXX
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>07</strong>
-									CINNO CILLINNI
+								<a href="#" class="map__list-item" data-partner-type="7">
+									<p>
+										<strong>07</strong>
+										CINNO CILLINNI
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>08</strong>
-									EVRO DIVAN
+								<a href="#" class="map__list-item" data-partner-type="8">
+									<p>
+										<strong>08</strong>
+										EVRO DIVAN
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>09</strong>
-									GoodWill
+								<a href="#" class="map__list-item" data-partner-type="9">
+									<p>
+										<strong>09</strong>
+										GoodWill
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>10</strong>
-									CINNO CILLINNI
+								<a href="#" class="map__list-item" data-partner-type="10">
+									<p>
+										<strong>10</strong>
+										CINNO CILLINNI
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>11</strong>
-									EVRO DIVAN
+								<a href="#" class="map__list-item" data-partner-type="1">
+									<p>
+										<strong>11</strong>
+										EVRO DIVAN
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>12</strong>
-									GoodWill
+								<a href="#" class="map__list-item" data-partner-type="2">
+									<p>
+										<strong>12</strong>
+										GoodWill
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>13</strong>
-									Hilding Anders 
+								<a href="#" class="map__list-item" data-partner-type="3">
+									<p>
+										<strong>13</strong>
+										Hilding Anders 
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>14</strong>
-									Любимый дом
+								<a href="#" class="map__list-item" data-partner-type="4">
+									<p>
+										<strong>14</strong>
+										Любимый дом
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>15</strong>
-									MOON
+								<a href="#" class="map__list-item" data-partner-type="5">
+									<p>
+										<strong>15</strong>
+										MOON
+									</p>
 								</a>
-								<a href="" class="map__list-item">
-									<strong>16</strong>
-									Hilding Anders 
+								<a href="" class="map__list-item" data-partner-type="6">
+									<p>
+										<strong>16</strong>
+										Hilding Anders 
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>17</strong>
-									Любимый дом
+								<a href="#" class="map__list-item" data-partner-type="7">
+									<p>
+										<strong>17</strong>
+										Любимый дом
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>18</strong>
-									MOON
+								<a href="#" class="map__list-item" data-partner-type="8">
+									<p>
+										<strong>18</strong>
+										MOON
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>19</strong>
-									Hilding Anders 
+								<a href="#" class="map__list-item" data-partner-type="9">
+									<p>
+										<strong>19</strong>
+										Hilding Anders 
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>20</strong>
-									Любимый дом
+								<a href="#" class="map__list-item" data-partner-type="10">
+									<p>
+										<strong>20</strong>
+										Любимый дом
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>21</strong>
-									MOON
+								<a href="#" class="map__list-item" data-partner-type="1">
+									<p>
+										<strong>21</strong>
+										MOON
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>22</strong>
-									Hilding Anders 
+								<a href="#" class="map__list-item" data-partner-type="2">
+									<p>
+										<strong>22</strong>
+										Hilding Anders 
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>23</strong>
-									Любимый дом
+								<a href="#" class="map__list-item" data-partner-type="3">
+									<p>
+										<strong>23</strong>
+										Любимый дом
+									</p>
 								</a>
-								<a href="#" class="map__list-item">
-									<strong>24</strong>
-									MOON
+								<a href="#" class="map__list-item" data-partner-type="4">
+									<p>
+										<strong>24</strong>
+										MOON
+									</p>
 								</a>
 							</div>
 						</div>
