--- a/src/blocks/modules/lk-menu/lk-menu.scss
+++ b/src/blocks/modules/lk-menu/lk-menu.scss
@@ -13,7 +13,6 @@
 		padding-top: 10px;
 		padding-bottom: 10px;
 		display: flex;
-		justify-content: space-between;
 		align-items: center;
 	}
 	&__title {
@@ -21,6 +20,7 @@
 	}
 	&__icon {
 		display: block;
+		margin-right: 15px;
 	}
 	&:before {
 		content: "";
