--- a/src/blocks/modules/modal/modal.scss
+++ b/src/blocks/modules/modal/modal.scss
@@ -79,6 +79,10 @@
 }
 
 .modal-service {
+	&--hidden {
+		max-width: 620px;
+		width: 100%;
+	}
 	&__content {
 		display: flex;
 		justify-content: space-between;
