--- a/src/views/4-page.html
+++ b/src/views/4-page.html
@@ -238,7 +238,7 @@
                                             </button>
                                             
                                             <div class="counter__input">
-                                                <input type="number" class="counter__input" value="10" min="0">
+                                                <input type="number" class="counter__input" value="10" min="0" max="15">
                                                 <p class="counter__type">
                                                     шт.
                                                 </p>
@@ -324,7 +324,7 @@
                                             </button>
                                             
                                             <div class="counter__input">
-                                                <input type="number" class="counter__input" value="10" min="0">
+                                                <input type="number" class="counter__input" value="10" min="0" max="15">
                                                 <p class="counter__type">
                                                     шт.
                                                 </p>
@@ -410,7 +410,7 @@
                                             </button>
                                             
                                             <div class="counter__input">
-                                                <input type="number" class="counter__input" value="10" min="0">
+                                                <input type="number" class="counter__input" value="10" min="0" max="15">
                                                 <p class="counter__type">
                                                     шт.
                                                 </p>
@@ -491,7 +491,7 @@
                                             </button>
                                             
                                             <div class="counter__input">
-                                                <input type="number" class="counter__input" value="10" min="0">
+                                                <input type="number" class="counter__input" value="10" min="0" max="15">
                                                 <p class="counter__type">
                                                     шт.
                                                 </p>
@@ -577,7 +577,7 @@
                                             </button>
                                             
                                             <div class="counter__input">
-                                                <input type="number" class="counter__input" value="10" min="0">
+                                                <input type="number" class="counter__input" value="10" min="0" max="15">
                                                 <p class="counter__type">
                                                     шт.
                                                 </p>
@@ -663,7 +663,7 @@
                                             </button>
                                             
                                             <div class="counter__input">
-                                                <input type="number" class="counter__input" value="10" min="0">
+                                                <input type="number" class="counter__input" value="10" min="0" max="15">
                                                 <p class="counter__type">
                                                     п.м.
                                                 </p>
