--- a/src/blocks/modules/lk-access/lk-access.scss
+++ b/src/blocks/modules/lk-access/lk-access.scss
@@ -1,14 +1,51 @@
 .lk-access {
+	// &__input {
+	// 	width: 100%;
+	// 	margin-bottom: 30px;
+	// }
+	&__content {
+		width: calc(100% / 12 * 5 - 10px);
+		@include r(1200) {
+			width: 100%;
+		}
+	}
 	&__input {
+		display: block;
 		width: 100%;
 		margin-bottom: 30px;
+		border: 1px solid $dark;
+		padding-left: 16px;
+		padding-right: 16px;
+		height: 69px;
+		font-size: 20px;
+		@include r(1200) {
+			padding-left: 10px;
+			padding-right: 10px;
+			height: 50px;
+			font-size: 18px;
+		}
+		&:placeholder {
+			font-size: 20px;
+			color: #828282;
+			@include r(1200) {
+				font-size: 18px;
+			}
+		}
 	}
 	&__text {
 		margin-bottom: 40px;
 		font-size: 20px;
+		@include r(1200) {
+			font-size: 18px;
+			margin-bottom: 30px;
+		}
 	}
 	&__btn {
 		padding-left: 63px;
 		padding-right: 63px;
+		@include r(1200) {
+			padding-left: 38px;
+			padding-right: 38px;
+		}
 	}
 }
